# seldon

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  seldon.yaml  seldon_events.jsonl
.claude-plugin/: plugin.json
.claude/agents/: auditor.md
.claude/skills/: briefing.md  closeout.md  research.md  result-register.md  task-track.md
docs/: 2026-04-03_feynman_pedagogy_gate_gap.md  2026-04-03_glossary_ontology_architecture_gap.md  data_dictionary.md  experiment_catalog.md  reproduction_guide.md  results_registry.md  scripts_reference.md  seldon_architectural_decisions_updated.md  seldon_cc_task_neo4j_pivot.md
docs/agents/: auditor_prompt.md
docs/conventions/: audit_output.md  (+2 more)
issues/: 2026-03-26_glossary_parser_false_positives.md
scripts/: observability_collect.py  observability_dashboard.py
seldon/: __init__.py  cli.py  config.py  mcp_server.py
templates/: cc_autonomous_loop.md  lab_notebook_entry.md  literature_note.md
tests/: conftest.py  test_agent_roles.py  test_artifacts.py  test_cc_complete.py  test_cc_utils.py  test_docs.py  test_docs_check.py  test_docs_generate.py  test_document_structure.py  test_domain.py  test_dotenv.py  test_env_var_fallback.py  test_events.py  test_go.py  test_graph.py  test_impact.py  test_issue.py  test_mcp_tools.py  test_name_resolution.py  test_numbering.py  test_ontology.py  test_paper_build.py  test_paper_context.py  test_paper_qc.py  test_paper_sync.py  test_result.py  test_session_commands.py  test_session_mgmt.py  test_staleness.py  test_state.py  test_sync.py  test_task.py  test_verify.py  test_verify_glossary.py
(+112 files in other folders)
